<?xml version="1.0"?>
<package format="2">
  <name>r3live</name>
  <version>1.0.0</version>
  <description>R3LIVE: A Robust, Real-time, RGB-colored, LiDAR-Inertial-Visual tightly-coupled state Estimation and mapping package</description>
  
  <!-- Maintainer information -->
  <maintainer email="junyu@example.com">junyu</maintainer>
  
  <!-- License information -->
  <license>MIT</license>
  
  <!-- Dependencies from livox_camera_calib -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>livox_ros_driver</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>livox_ros_driver</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
